--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,7 +27,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/index.xhtml</welcome-file>
+        <welcome-file>session/login.xhtml</welcome-file>
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
